@@ -364,6 +364,16 @@
                                 <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
                             </jvmArgs>
                         </launcher>
+                        <launcher>
+                            <id>MapWikidataToLanguageUri</id>
+                            <mainClass>org.dbpedia.extraction.scripts.MapWikidataToLanguageUri</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-Xms8G</jvmArg>
+                                <jvmArg>-Xmx32G</jvmArg>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
                     </launchers>
                 </configuration>
             </plugin>
